--- a/BTimeLogger.Wpf/MainWindow.xaml
+++ b/BTimeLogger.Wpf/MainWindow.xaml
@@ -1,13 +1,97 @@
 ﻿<Window x:Class="BTimeLogger.Wpf.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:BTimeLogger.Wpf"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid DataContext="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type local:MainWindow}}}"
-          Background="{StaticResource cardBackground}">
-        <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="20">Hello world!</TextBlock>
-    </Grid>
+		xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+		xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+		xmlns:local="clr-namespace:BTimeLogger.Wpf"
+		mc:Ignorable="d"
+		Title="MainWindow"
+		Height="450"
+		Width="800"
+		WindowStyle="None">
+	<WindowChrome.WindowChrome>
+		<WindowChrome CaptionHeight="32"
+					  ResizeBorderThickness="{x:Static SystemParameters.WindowResizeBorderThickness}" />
+	</WindowChrome.WindowChrome>
+	<Grid DataContext="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type local:MainWindow}}}">
+		<Grid.RowDefinitions>
+			<RowDefinition Height="Auto" />
+			<RowDefinition Height="*" />
+		</Grid.RowDefinitions>
+		<!--Title Bar-->
+		<Grid >
+			<Grid.ColumnDefinitions>
+				<ColumnDefinition Width="Auto" />
+				<ColumnDefinition Width="*" />
+				<ColumnDefinition Width="Auto" />
+				<ColumnDefinition Width="Auto" />
+				<ColumnDefinition Width="Auto" />
+			</Grid.ColumnDefinitions>
+			<!--TODO: behavior-->
+			<Menu Grid.Column="0" VerticalAlignment="Center"
+				  Visibility="Visible"
+				  Style="{StaticResource TitleBarMenuStyle}">
+				<MenuItem Header="_File">
+					<MenuItem Header="_Open" />
+					<MenuItem Header="_Save" IsEnabled="False" />
+					<MenuItem Header="Save As" />
+					<MenuItem Header="Exit" />
+				</MenuItem>
+			</Menu>
+
+
+			<TextBlock Grid.Column="1"
+					   Margin="4 0 0 0"
+					   VerticalAlignment="Center"
+					   FontSize="14"
+					   Text="{StaticResource appTitle}">
+			</TextBlock>
+
+			<Button Grid.Column="2"
+					RenderOptions.EdgeMode="Aliased"
+					Style="{StaticResource TitleBarButtonStyle}">
+				<Path Width="46"
+					  Height="32"
+					  Data="M 18,15 H 28"
+					  Stroke="{Binding Path=Foreground,
+							 RelativeSource={RelativeSource AncestorType={x:Type Button}}}"
+					  StrokeThickness="1" />
+			</Button>
+			<Button Name="maximizeButton"
+					Grid.Column="3"
+					Style="{StaticResource TitleBarButtonStyle}">
+				<Path Width="46"
+					  Height="32"
+					  Data="M 18.5,10.5 H 27.5 V 19.5 H 18.5 Z"
+					  Stroke="{Binding Path=Foreground,
+							 RelativeSource={RelativeSource AncestorType={x:Type Button}}}"
+					  StrokeThickness="1" />
+			</Button>
+			<Button Name="restoreButton"
+					Grid.Column="3"
+					Style="{StaticResource TitleBarButtonStyle}">
+				<Path Width="46"
+					  Height="32"
+					  Data="M 18.5,12.5 H 25.5 V 19.5 H 18.5 Z M 20.5,12.5 V 10.5 H 27.5 V 17.5 H 25.5"
+					  Stroke="{Binding Path=Foreground,
+							 RelativeSource={RelativeSource AncestorType={x:Type Button}}}"
+					  StrokeThickness="1" />
+			</Button>
+			<Button Grid.Column="4"
+					Style="{StaticResource TitleBarCloseButtonStyle}">
+				<Path Width="46"
+					  Height="32"
+					  Data="M 18,11 27,20 M 18,20 27,11"
+					  Stroke="{Binding Path=Foreground,
+							 RelativeSource={RelativeSource AncestorType={x:Type Button}}}"
+					  StrokeThickness="1" />
+			</Button>
+		</Grid>
+		<Grid Background="{StaticResource cardBackground}"
+			  Grid.Row="1">
+			<TextBlock Text="Hello world!"
+					   FontSize="20" />
+		</Grid>
+	</Grid>
+
 </Window>
