--- a/BTimeLogger.Wpf/MainWindow.xaml
+++ b/BTimeLogger.Wpf/MainWindow.xaml
@@ -1,66 +1,62 @@
 ﻿<Window x:Class="BTimeLogger.Wpf.MainWindow"
-		xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-		xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-		xmlns:local="clr-namespace:BTimeLogger.Wpf"
-		xmlns:view="clr-namespace:BTimeLogger.Wpf.View"
-		mc:Ignorable="d"
-		Title="MainWindow"
-		Height="450"
-		Width="800"
-		WindowStyle="None">
-	<WindowChrome.WindowChrome>
-		<WindowChrome CaptionHeight="32"
-					  ResizeBorderThickness="{x:Static SystemParameters.WindowResizeBorderThickness}" />
-	</WindowChrome.WindowChrome>
-	<Grid DataContext="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type local:MainWindow}}}">
-		<Grid.RowDefinitions>
-			<RowDefinition Height="Auto" />
-			<RowDefinition Height="*" />
-		</Grid.RowDefinitions>
-		<!--Title Bar-->
-		<Grid >
-			<Grid.ColumnDefinitions>
-				<ColumnDefinition Width="Auto" />
-				<ColumnDefinition Width="*" />
-				<ColumnDefinition Width="Auto" />
-			</Grid.ColumnDefinitions>
-			<!--TODO: behavior-->
-			<Menu Grid.Column="0" VerticalAlignment="Center"
-				  Visibility="Visible"
-				  Style="{StaticResource TitleBarMenuStyle}">
-				<MenuItem Header="_File">
-					<MenuItem Header="_Open" />
-					<MenuItem Header="_Save" IsEnabled="False" />
-					<MenuItem Header="Save As" />
-					<MenuItem Header="Exit" />
-				</MenuItem>
-			</Menu>
+        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:local="clr-namespace:BTimeLogger.Wpf"
+        xmlns:view="clr-namespace:BTimeLogger.Wpf.View"
+        mc:Ignorable="d"
+        Title="MainWindow"
+        Height="450"
+        Width="800"
+        WindowStyle="None">
+    <WindowChrome.WindowChrome>
+        <WindowChrome CaptionHeight="32"
+                      ResizeBorderThickness="{x:Static SystemParameters.WindowResizeBorderThickness}" />
+    </WindowChrome.WindowChrome>
+    <Grid DataContext="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type local:MainWindow}}}">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+        <!--Title Bar-->
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="Auto" />
+            </Grid.ColumnDefinitions>
+            <!--TODO: behavior-->
+            <Menu Grid.Column="0"
+                  VerticalAlignment="Center"
+                  Visibility="Visible"
+                  Style="{StaticResource TitleBarMenuStyle}">
+                <MenuItem Header="_File">
+                    <MenuItem Header="_Open" />
+                    <MenuItem Header="_Save"
+                              IsEnabled="False" />
+                    <MenuItem Header="Save As" />
+                    <MenuItem Header="Exit" />
+                </MenuItem>
+            </Menu>
 
 
-			<TextBlock Grid.Column="1"
-					   Margin="4 0 0 0"
-					   VerticalAlignment="Center"
-					   FontSize="14"
-					   Text="{StaticResource appTitle}">
-			</TextBlock>
-            <view:WindowButtons ViewModel="{Binding ViewModel.WindowButtonsViewModel}"
-                                Grid.Column="2">
-                <view:WindowButtons.Style>
-                    <Style>
-                        <Setter Property="WindowChrome.IsHitTestVisibleInChrome"
-                                Value="True" />
-                    </Style>
-                </view:WindowButtons.Style>
-            </view:WindowButtons>
+            <TextBlock Grid.Column="1"
+                       Margin="4 0 0 0"
+                       VerticalAlignment="Center"
+                       FontSize="14"
+                       Text="{StaticResource appTitle}">
+            </TextBlock>
+            <view:WindowButtons Grid.Column="2"
+                                DisableCloseInteraction="True"
+                                ViewModel="{Binding ViewModel.WindowButtonsViewModel}" />
 
-		</Grid>
-		<Grid Background="{StaticResource cardBackground}"
-			  Grid.Row="1">
-			<TextBlock Text="Hello world!"
-					   FontSize="20" />
-		</Grid>
-	</Grid>
+        </Grid>
+        <Grid Background="{StaticResource cardBackground}"
+              Grid.Row="1">
+            <TextBlock Text="Hello world!"
+                       FontSize="20" />
+        </Grid>
+    </Grid>
 
 </Window>
