--- a/BTimeLogger.Wpf/Resources/DataTemplates.xaml
+++ b/BTimeLogger.Wpf/Resources/DataTemplates.xaml
@@ -1,4 +1,14 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:mainVM="clr-namespace:BTimeLogger.Wpf.ViewModels.MainWindow"
+                    xmlns:mainView="clr-namespace:BTimeLogger.Wpf.View.MainWindow">
+    <DataTemplate DataType="{x:Type mainVM:HomeViewModel}">
+        <mainView:Home ViewModel="{Binding }" />
+    </DataTemplate>
+    <DataTemplate DataType="{x:Type mainVM:IntervalsViewModel}">
+        <mainView:Intervals ViewModel="{Binding }" />
+    </DataTemplate>
+    <DataTemplate DataType="{x:Type mainVM:StatisticsViewModel}">
+        <mainView:Statistics ViewModel="{Binding }" />
+    </DataTemplate>
 </ResourceDictionary>
