--- a/BTimeLogger.Wpf/View/WindowButtons.xaml
+++ b/BTimeLogger.Wpf/View/WindowButtons.xaml
@@ -17,7 +17,8 @@
         <Button Grid.Column="0"
                 Command="{Binding ViewModel.MinimizeCommand}"
                 RenderOptions.EdgeMode="Aliased"
-                Style="{StaticResource TitleBarButtonStyle}">
+                Style="{StaticResource TitleBarButtonStyle}"
+                >
             <Path Width="46"
                   Height="32"
                   Data="M 18,15 H 28"
