--- a/BTimeLogger.Wpf/View/CreateReportWindow.xaml
+++ b/BTimeLogger.Wpf/View/CreateReportWindow.xaml
@@ -6,7 +6,9 @@
         xmlns:local="clr-namespace:BTimeLogger.Wpf.View"
         mc:Ignorable="d"
         Title="CreateReportWindow"
-        Height="350"
+        MinHeight="400"
+        MinWidth="350"
+        Height="400"
         Width="500"
         WindowStyle="None">
     <WindowChrome.WindowChrome>
@@ -18,9 +20,11 @@
             Background="{StaticResource skinBackgroundLightBrush}">
         <StackPanel Orientation="Vertical">
             <StackPanel.Resources>
-                <Style TargetType="{x:Type DatePicker}">
+                <Style TargetType="{x:Type DatePicker}" BasedOn="{StaticResource DatePickerStyle}">
                     <Setter Property="Margin"
                             Value="0 0 0 20" />
+                    <Setter Property="CalendarStyle"
+                            Value="{StaticResource DatePickerCalendarStyle}" />
                 </Style>
                 <Style TargetType="{x:Type local:FilePicker}">
                     <Setter Property="Margin"
@@ -32,10 +36,12 @@
                        Foreground="{StaticResource skinFontBrush}"
                        HorizontalAlignment="Center" Margin="20"/>
 
+            <!--TODO: default date picker/calendar styles not being applied-->
             <DatePicker SelectedDate="{Binding ViewModel.FromDate}"
                         Text="{StaticResource fromDate}" />
             <DatePicker SelectedDate="{Binding ViewModel.ToDate}"
                         Text="{StaticResource toDate}" />
+            
 
             <local:FilePicker Description="CSV Report Location"
                               Text="{Binding ViewModel.ReportFileLoc, Mode=TwoWay}" />
