Very very messy change: removed idea of "-Report." Now ViewModels interact directly with repositories, and respond to changes directly rather than trying to have odd report VMs handle changes indirectly.

--- a/BTimeLogger.Wpf/View/FilePicker.xaml
+++ b/BTimeLogger.Wpf/View/FilePicker.xaml
@@ -24,8 +24,7 @@
         <TextBlock HorizontalAlignment="Stretch"
                    TextWrapping="Wrap"
                    Text="{Binding Description, Mode=OneWay}"
-                   FontSize="15"
-                   Visibility="{Binding }"/>
+                   FontSize="15"/>
         
         <Button Grid.Column="1"
                 Grid.Row="1"
