--- a/BTimeLogger.Wpf/Resources/StringResources.xaml
+++ b/BTimeLogger.Wpf/Resources/StringResources.xaml
@@ -22,4 +22,5 @@
     <system:String x:Key="create">Create</system:String>
     <system:String x:Key="createReport">Create Report</system:String>
     <system:String x:Key="elipses">...</system:String>
+    <system:String x:Key="invalidReport">Invalid report info.</system:String>
 </ResourceDictionary>
