--- a/BTimeLogger.Wpf/View/IntervalList.xaml
+++ b/BTimeLogger.Wpf/View/IntervalList.xaml
@@ -9,18 +9,13 @@
              d:DesignHeight="450" d:DesignWidth="800">
     <Border DataContext="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type local:IntervalList}}}"
             Style="{StaticResource ListViewBorderStyle}">
-
         <Grid>
-            <Grid.RowDefinitions>
-                <RowDefinition />
-                <RowDefinition Height="Auto" />
-            </Grid.RowDefinitions>
-
             <ListView ItemsSource="{Binding ViewModel.Items, Mode=OneWay}"
                       Grid.Row="0"
                       ScrollViewer.HorizontalScrollBarVisibility="Disabled"
                       VerticalAlignment="Top"
-                      Name="listView">
+                      Name="listView"
+                      Visibility="{Binding ViewModel.NotLoading, Converter={StaticResource boolToVis}}">
                 
                 <ListView.ItemTemplate>
                     <DataTemplate DataType="{x:Type  viewmodel:IntervalListItemViewModel}">
@@ -29,8 +24,7 @@
                 </ListView.ItemTemplate>
             </ListView>
 
-            <StackPanel Orientation="Vertical"
-                        Grid.Row="1">
+            <StackPanel Orientation="Vertical">
                 <StackPanel.Resources>
                     <Style TargetType="{x:Type TextBlock}"
                            BasedOn="{StaticResource TextBlockStyle}">
@@ -42,8 +36,8 @@
                                 Value="20" />
                     </Style>
                 </StackPanel.Resources>
-                <TextBlock Visibility="{Binding ViewModel.Loading, Converter={StaticResource boolToVis}}"
-                           Text="{StaticResource loading}" />
+                <TextBlock 
+                           Text="{StaticResource loading}" Visibility="{Binding ViewModel.Loading, Converter={StaticResource boolToVis}}"/>
                 <TextBlock Visibility="{Binding ViewModel.IsEmpty, Converter={StaticResource boolToVis}}"
                            Text="{StaticResource noActivitiesInRange}" />
             </StackPanel>
