--- a/BTimeLogger.Wpf/Resources/StringResources.xaml
+++ b/BTimeLogger.Wpf/Resources/StringResources.xaml
@@ -23,4 +23,6 @@
     <system:String x:Key="createReport">Create Report</system:String>
     <system:String x:Key="elipses">...</system:String>
     <system:String x:Key="invalidReport">Invalid report info.</system:String>
+    <system:String x:Key="group">Group</system:String>
+    <system:String x:Key="activities">Activities</system:String>
 </ResourceDictionary>
