--- a/BTimeLogger.Wpf/View/MainWindow/Intervals.xaml
+++ b/BTimeLogger.Wpf/View/MainWindow/Intervals.xaml
@@ -5,9 +5,18 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:BTimeLogger.Wpf.View.MainWindow"
              xmlns:view="clr-namespace:BTimeLogger.Wpf.View"
+             xmlns:viewmodels="clr-namespace:BTimeLogger.Wpf.ViewModels"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid DataContext="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type local:Intervals}}}">
-        <view:IntervalList ViewModel="{Binding ViewModel.IntervalListViewModel}" />
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition />
+            <ColumnDefinition />
+        </Grid.ColumnDefinitions>
+        <StackPanel Orientation="Vertical">
+            <view:GroupedActivityFilter ViewModel="{Binding ViewModel.GroupedActivityFilterViewModel}" />
+
+        </StackPanel>
+        <view:IntervalList ViewModel="{Binding ViewModel.IntervalListViewModel}"  Grid.Column="1"/>
     </Grid>
 </UserControl>
