--- a/BTimeLogger.Wpf/MainWindow.xaml
+++ b/BTimeLogger.Wpf/MainWindow.xaml
@@ -7,8 +7,10 @@
         xmlns:view="clr-namespace:BTimeLogger.Wpf.View"
         mc:Ignorable="d"
         Title="MainWindow"
-        Height="450"
-        Width="800"
+        MinHeight="450"
+        MinWidth="800"
+        Height="800"
+        Width="1200"
         WindowStyle="None">
     <WindowChrome.WindowChrome>
         <WindowChrome CaptionHeight="32"
