--- a/BTimeLogger.Wpf/View/GroupedActivityFilter.xaml
+++ b/BTimeLogger.Wpf/View/GroupedActivityFilter.xaml
@@ -10,9 +10,12 @@
     <StackPanel
         Orientation="Vertical"
         DataContext="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type local:GroupedActivityFilter}}}">
-        
-        <TextBlock Text="{StaticResource group}" Margin="0 0 0 5" FontSize="15"/>
-        <ComboBox ItemsSource="{Binding ViewModel.GroupsSource}" SelectedItem="{Binding ViewModel.SelectedGroupActivity}">
+
+        <Label Content="{StaticResource group}"
+               Target="{Binding ElementName=GroupSource}"  />
+        <ComboBox ItemsSource="{Binding ViewModel.GroupsSource}"
+                  SelectedItem="{Binding ViewModel.SelectedGroupActivity}"
+                  x:Name="GroupSource">
             <ComboBox.ItemTemplate>
                 <DataTemplate DataType="{x:Type dViewmodels:ActivityViewModel}">
                     <TextBlock Text="{Binding Name}" />
@@ -20,11 +23,12 @@
             </ComboBox.ItemTemplate>
         </ComboBox>
 
-        <TextBlock Text="{StaticResource activities}"
-                   Margin="0 10 0 5"
-                   FontSize="15" />
+        <Label Content="{StaticResource activities}"
+               Target="{Binding ElementName=ActivitiesSource}"
+               Margin="0 10 0 0" />
         <local:MultiSelectListBox ItemsSource="{Binding ViewModel.ActivitiesSource}"
-                                  SelectedItemsList="{Binding ViewModel.SelectedActivities}">
+                                  SelectedItemsList="{Binding ViewModel.SelectedActivities}"
+                                  x:Name="ActivitiesSource">
             <ListBox.ItemTemplate>
                 <DataTemplate DataType="{x:Type dViewmodels:ActivityViewModel}">
                     <TextBlock Text="{Binding Name}" />
