--- a/BTimeLogger.Wpf/View/MainWindow/Intervals.xaml
+++ b/BTimeLogger.Wpf/View/MainWindow/Intervals.xaml
@@ -20,8 +20,13 @@
                 <view:GroupedActivityFilter ViewModel="{Binding ViewModel.GroupedActivityFilterViewModel}" 
                                        />
                 </Border>
+                <Border Style="{DynamicResource CardBorderStyle}"
+                        Padding="10"
+                        Margin="0 10 0 0">
+                    <view:TimeSpanPanel ViewModel="{Binding ViewModel.TimeSpanPanelViewModel}" />
+                </Border>
 
-        </StackPanel>
+            </StackPanel>
         </Border>
         <view:IntervalList ViewModel="{Binding ViewModel.IntervalListViewModel}"  Grid.Column="1"/>
     </Grid>
