Changed CreateReportWindow to OpenCsvsWindow, removed unnecessary stuff from that window, clear db before reading csvs.

--- a/BTimeLogger.Wpf/Resources/StringResources.xaml
+++ b/BTimeLogger.Wpf/Resources/StringResources.xaml
@@ -25,4 +25,5 @@
     <system:String x:Key="invalidReport">Invalid report info.</system:String>
     <system:String x:Key="group">Group</system:String>
     <system:String x:Key="activities">Activities</system:String>
+    <system:String x:Key="pickReportLocations">Pick report locations</system:String>
 </ResourceDictionary>
