--- a/BTimeLogger.Wpf/Resources/StringResources.xaml
+++ b/BTimeLogger.Wpf/Resources/StringResources.xaml
@@ -1,7 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:system="clr-namespace:System;assembly=mscorlib">
-    <system:String x:Key="appTitle">ATimeLogger</system:String>
+    <system:String x:Key="appTitle">BTimeLogger</system:String>
     <system:String x:Key="appShortDesc">A time tracking app</system:String>
     <system:String x:Key="fromDate">From</system:String>
     <system:String x:Key="toDate">To</system:String>
@@ -26,4 +26,5 @@
     <system:String x:Key="group">Group</system:String>
     <system:String x:Key="activities">Activities</system:String>
     <system:String x:Key="pickReportLocations">Pick report locations</system:String>
+    <system:String x:Key="noData">No data</system:String>
 </ResourceDictionary>
