--- a/BTimeLogger.Wpf/View/MainWindow/Statistics.xaml
+++ b/BTimeLogger.Wpf/View/MainWindow/Statistics.xaml
@@ -7,7 +7,9 @@
              xmlns:view="clr-namespace:BTimeLogger.Wpf.View"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid DataContext="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type local:Statistics}}}">
-        <view:PieChart ViewModel="{Binding ViewModel.GroupStatisticsPieChartViewModel}" />
+    <Grid DataContext="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type local:Statistics}}}"
+          >
+        <view:PieChart ViewModel="{Binding ViewModel.GroupStatisticsPieChartViewModel}"
+                       />
     </Grid>
 </UserControl>
